--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 </div>
 
                 <div id="cities">
+                    <h2>Search History:</h2> <br />
                     <ul id="citiesList" class="list-group">
 
                     </ul>
